Relatively big update. Fixed a few things

--- a/Roleplay server/src/plugin.yml
+++ b/Roleplay server/src/plugin.yml
@@ -25,3 +25,11 @@ commands:
       description: Printer viktig i chat
     c:
       description: Adminchat
+    m:
+      description: PM
+    r:
+      description: reply
+    spy:
+      description: Socialspy
+    ignorer:
+      description: Ignorerer spiller
